--- a/index.html
+++ b/index.html
@@ -4455,6 +4455,11 @@ let Gemswitch12 = true;
 let Gemswitch13 = true;
 let Gemswitch14 = true;
 
+const password = prompt("Bitte Passwort eingeben:");
+  if (password !== "FürKoi") {
+    document.body.innerHTML = "Falsches Passwort";
+  }
+	
 function blocktutorial() {
 btutorial = true;
 tutorialblock = 0;
