--- a/index.html
+++ b/index.html
@@ -4217,7 +4217,7 @@ let tutorialblock = 0;
 
 //Schwierigkeitsgrad
 let Hard = false;
-let Normal = true;
+let Normal = false;
 let Easy = false;
 
 //Level
