--- a/index.html
+++ b/index.html
@@ -4107,7 +4107,15 @@ background-color: black;
 </div>
 
 <div id="newSurface11" class="new-surface">
-<div class="popup" id="commingsoon" style="top: 100px;">
+<div class="popup" id="updatelog" style="top: 100px; left: 75%;">
+<div>Update:</div>
+<div>Angriffs Trank</div>
+<div>shop angepasst</div>
+<div>coming soon logs erstellt</div>
+<div>Updatelogs erstellt</div>
+<div>Bug fix</div>
+</div>
+<div class="popup" id="commingsoon" style="top: 100px; left: 25%;">
 <div>coming soon:</div>
 <div>Mehr Talente</div>
 <div>Töne z.b: Schlag sound, Kauf sound, ...</div>
@@ -4595,6 +4603,7 @@ document.getElementById("Bleed").classList.add("hidden");
 	  document.getElementById("ball").classList.add("hidden");
 	  document.getElementById("wayContainer").classList.add("hidden");
 	  document.getElementById("commingsoon").style.display = 'block';
+	document.getElementById("updatelog").style.display = 'block';
 }
 
 function losgehts() {
