--- a/index.html
+++ b/index.html
@@ -5281,12 +5281,12 @@
 		//Schwierigkeitsgrad
 		let Hard = false;
 		let Normal = false;
-		let Easy = true;
+		let Easy = false;
 
 		//Level
 		let level = 1;
 		const maxLevels = 100;
-		var progress = 3; //fortschritt
+		var progress = 0; //fortschritt
 
 		//rounds
 		let score = 0;
@@ -5422,7 +5422,7 @@
 		let selectednumber3;
 
 		//Ausrüsten und Craft
-		let Warhammer = 1;
+		let Warhammer = 0;
 		let Magichut = 0;
 		let Magicrobe = 0;
 		let Firewand = 0;
