--- a/index.html
+++ b/index.html
@@ -5042,13 +5042,16 @@
 			<div>Neues Item Blumen</div>
 			<div>Neues Item Kohle</div>
 			<div>Neue Waffe Kritisches Messer im Shop</div>
+			<div>Quests mit belohnung</div>
+			<div>Neue Waffe Goldenes Schwert</div>
 		</div>
 		<div class="popup" id="commingsoon" style="top: 100px; left: 25%;">
 			<div>coming soon:</div>
 			<div>Blumen im Shop zu Kaufen</div>
-			<div>Natur Element zum Craften</div>
 			<div>Kohle im Shop zu Kaufen</div>
-			<div>Dunkles Element zum Craften</div>
+			<div>Classen (Krieger, Magier, Tank)</div>
+			<div>Neue Lebens art (Schild)</div>
+			<div>Ausrüstung Verkaufen</div>
 			<div>Mehr Talente</div>
 			<div>Töne z.b: Schlag sound, Kauf sound, ...</div>
 			<div>Welt 4</div>
