--- a/index.html
+++ b/index.html
@@ -5295,6 +5295,7 @@
 	<div class="popup5" id="tutorialPopup">
 		<button onclick="back()">back</button>
 		<div>Willkommen bei Blocks Hero's</div><br>
+		<div>Tipp: ESC um in die Einstellungen zu kommen.</div>
 		<div>1. Map aufbau:<br><br>Unten Startest du indem du auch Start clicks,
 			dazu siehst du einen Talentbaum, da können Talente Freischalten werden um stärker zu werden.<br>
 			Ausrüstungen gibt es auch.</div><br>
